[package]
name = "nv-crack"
version = "0.1.0"
authors = ["Pascal K."]
edition = "2018"
license = "MIT"
description = "A quick way to get the v8 / Node.js version of a v8-bytecode file"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
